--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,12 @@
   	<tinylog.impl.version>2.0.0</tinylog.impl.version>
   	<google.gson.version>2.8.5</google.gson.version>
   	<lombok.version>1.18.10</lombok.version>
+  	<apache.commons.version>2.6</apache.commons.version>
+  	<maven.shade.plugin>2.3</maven.shade.plugin>
+  	<jdk.version>1.8</jdk.version>
+  	<maven.compiler.target>1.8</maven.compiler.target>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <google.guava.version>21.0</google.guava.version>
   </properties>
   
   <dependencies>
@@ -34,9 +40,48 @@
 	<dependency>
 		<groupId>org.projectlombok</groupId>
 		<artifactId>lombok</artifactId>
-		<version>${lombok.version}</version>
-		
+		<version>${lombok.version}</version>		
+	</dependency>
+	
+		<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+	<dependency>
+	    <groupId>commons-io</groupId>
+	    <artifactId>commons-io</artifactId>
+	    <version>${apache.commons.version}</version>
+	</dependency>
+	
+	<dependency>
+		<groupId>com.google.guava</groupId>
+		<artifactId>guava</artifactId>
+		<version>${google.guava.version}</version>
 	</dependency>
 	
   </dependencies>
+  
+  <build>
+	  <plugins>
+	  	<plugin>
+		  <groupId>org.apache.maven.plugins</groupId>
+		  <artifactId>maven-shade-plugin</artifactId>
+		  <version>${maven.shade.plugin}</version>
+		  <executions>
+		     <!-- Run shade goal on package phase -->
+		    <execution>
+			<phase>package</phase>
+			<goals>
+				<goal>shade</goal>
+			</goals>
+			<configuration>
+			  <transformers>
+					<!-- add Main-Class to manifest file -->
+                    <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+					<mainClass>edu.utd.aos.mutex.core.Main</mainClass>
+				</transformer>
+			  </transformers>
+			</configuration>
+		      </execution>
+		  </executions>
+		</plugin>
+	  </plugins>
+  </build>
 </project>
